# usb-to-usb

./: CMakeLists.txt  README.md
device/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
host/: main.c  tusb_config.h
